# advent-of-code

./: .gitmodules  README.md
.github/workflows/: 1-1-trebuchet.yml  1-2-trebuchet.yml  2-1-cubes.yml  2-2-cubes.yml  3-1-gears.yml  3-2-gears.yml  4-1-scratchcards.yml  4-2-scratchcards.yml  5-1-seeds.yml  5-2-seeds.yml  trebuchet.yml
.github/workflows/templates/cargo-test/: action.yml
.github/workflows/templates/cmake-test/: action.yml
.github/workflows/templates/elixir-test/: action.yml
.github/workflows/templates/final-answer/: action.yml
.github/workflows/templates/go-test/: action.yml
2023/02-cubes/part-1/: CMakeLists.txt
2023/02-cubes/part-1/include/: logicker.h  parser.h  string_utils.h
2023/02-cubes/part-1/src/: logicker.c  main.c  parser.c  string_utils.c
2023/02-cubes/part-1/tests/: logicker_tests.c  parser_tests.c  parser_tests.h  string_utils_tests.c  string_utils_tests.h  tests.c
2023/02-cubes/part-2/: CMakeLists.txt
2023/02-cubes/part-2-checker/: cubes-part-2-checker.sln
2023/02-cubes/part-2/include/: parser.h
2023/02-cubes/part-2/src/: logicker.c  main.c  parser.c
2023/02-cubes/part-2/tests/: logicker_tests.c  logicker_tests.h  string_utils_tests.c  string_utils_tests.h
2023/03-gears/part-1/: build.zig
2023/03-gears/part-2/: .gitignore
2023/04-scratchcards/part-2/: .gitignore
2023/05-seeds/part-1/: go.mod  main.go  main_test.go
2023/05-seeds/part-2/: go.mod  main.go  main_test.go
2023/1-1-trebuchet/: Cargo.toml
2023/1-1-trebuchet/src/: main.rs
2023/1-2-trebuchet/: Cargo.toml
2023/1-2-trebuchet/src/: main.rs
(+30 files in other folders)
